# CrystalDiskInfo-master

./: .gitignore  API_COMPLIANCE_CHECK.md  AboutDlg.cpp  AboutDlg.h  CHANGES_SUMMARY.md  DiskInfoDlgMenu.cpp  GITHUB_PUSH_INSTRUCTIONS.md  HttpClient.cpp  README.md  RENAME_REPOSITORY.md  ServerSettingsDlg.h
CrystalDiskInfo-master/: COMPILE_STATUS.md  DiskInfoDlg.h  DiskInfoDlgInit.cpp  DiskInfoDlgUpdate.cpp
CrystalDiskInfo-master/CrystalDiskInfo-master/: API_HDD_ENDPOINTS.md  API_V2_COMPLIANCE.md  API_V2_PROPOSAL.md  AUTO_SEND_CONFIG.md  DataCollector.cpp  DataCollector.h  DiskInfo.rc  DiskInfoDlg.cpp  FINAL_CHANGES.md  HttpClient.h  INTEGRATION_EXAMPLE.cpp  INTEGRATION_README.md  INTEGRATION_SUMMARY.md
CrystalDiskInfo-master/Language/: Russian.lang
CrystalDiskInfo-master/Rugenia/: unins000.msg
CrystalDiskInfo-master/cpp/: MIGRATION_SUMMARY.md
CrystalDiskInfo-master/cpp/src/: http_client.cpp  smart_helper.cpp
Rugenia/CdiResource/language/: Russian.lang
Rugenia/Smart/ADATA SX8200PNP2N102L1BEEJF/: HostWrites.csv  PowerOnHours.csv  Temperature.csv
Rugenia/Smart/BESHTAU 1305RUB7E007381B3500356297/: Temperature.csv
Rugenia/Smart/CUSU CV3500 512GBCCFC4BAC6BE0BB78126D/: 0E.csv  HostWrites.csv  Life.csv  PowerOnCount.csv  PowerOnHours.csv
Rugenia/Smart/CUSU CV3500Q 1TB4F857D978LW3I3LFS93X/: HostWrites.csv  Life.csv  PowerOnCount.csv
Rugenia/Smart/KINGSTON SA400S37120G50026B7380078992/: C2.csv  F2.csv  HostWrites.csv  Life.csv  PowerOnCount.csv  ReallocationEventCount.csv  Temperature.csv
Rugenia/Smart/MB0500EBNCRWMAYP3206580/: 03.csv  BC.csv  C2.csv  C4.csv
Rugenia/Smart/MB0500EBNCRWMAYP3213644/: 09.csv  ReallocationEventCount.csv  Temperature.csv
Rugenia/Smart/MB0500EBNCRWMAYP3214689/: 09.csv  BB.csv  BC.csv  BE.csv  C2.csv  C4.csv  PowerOnCount.csv  Temperature.csv
Rugenia/Smart/MB0500EBNCRWMAYP3214738/: 03.csv  09.csv  0C.csv  C0.csv  C4.csv  C8.csv  (+2 more)
cpp/: .gitignore  BUILD.md  BUILD_FIX.md  CMakeLists.txt  HOW_IT_WORKS.md  README.md
cpp/src/: hdd_collector.cpp  hdd_collector.h  http_client.h  json_helper.cpp  json_helper.h  main.cpp  smart_helper.h  wmi_helper.cpp  wmi_helper.h
(+268 files in other folders)
